refactor(dev): setup `index` and `__layout` files for compiling project as a website
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
 		"editor.defaultFormatter": "svelte.svelte-vscode"
 	},
 	"cSpell.words": ["GITHUBTOKEN", "pinterest", "poppanator", "zindex"],
-	"conventionalCommits.scopes": ["pre-release", "beta", "alpha", "patch", "BREAKING CHANGE"]
+	"conventionalCommits.scopes": ["pre-release", "beta", "alpha", "patch", "BREAKING CHANGE", "dev"]
 }
