fix(pre-release): :ambulance: fix type declarations and styles not exporting from packaged npm
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"registry": "https://registry.npmjs.org/",
 		"access": "public"
 	},
+	"files": ["**/*.d.ts","**"],
 	"scripts": {
 		"svelte:dev": "svelte-kit dev --open --host",
 		"svelte:build": "svelte-kit build",
