feat(pre-release): :sparkles: bootstrap `Alert` component
- adjust style colors to be hsl vars
- `storybook` for `Alert` component is missing

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
 		"registry": "https://registry.npmjs.org/",
 		"access": "public"
 	},
-	"files": ["**/*.d.ts","**"],
+	"files": [
+		"**/*.d.ts",
+		"**"
+	],
 	"scripts": {
 		"svelte:dev": "svelte-kit dev --open --host",
 		"svelte:build": "svelte-kit build",
