--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
 		"@storybook/addon-svelte-csf": "^1.1.0",
 		"@storybook/preset-scss": "^1.0.3",
 		"@storybook/svelte": "^6.3.8",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.174",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/svelte": "^3.0.3",
 		"@types/jest": "^27.0.2",
