--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
 			"pre-commit": "lint-staged"
 		}
 	},
+	"dependencies": {
+		"clsx": "^1.1.1",
+		"svelte": "^3.42.6"
+	},
 	"devDependencies": {
 		"@babel/core": "^7.15.5",
 		"@babel/preset-env": "^7.15.6",
@@ -72,7 +76,6 @@
 		"@types/jest": "^27.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.31.2",
 		"@typescript-eslint/parser": "^4.31.2",
-		"clsx": "^1.1.1",
 		"css-loader": "^5.2.6",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -87,7 +90,6 @@
 		"sass": "^1.42.0",
 		"sass-loader": "10.1.1",
 		"style-loader": "2.0.0",
-		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
 		"svelte-jester": "^2.1.4",
 		"svelte-loader": "^3.1.2",
