--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,7 +53,16 @@ jobs:
         run: 'pnpm run check'
 
       - name: Run tests
-        run: pnpm run test
+        run: pnpm run test:coverage
+
+      - name: Upload test coverage reports
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./coverage
+          flags: UITest,UnitTest # optional
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
 
       - name: run Build
         run: pnpm run svelte:build
