chore(dev): :wrench: add `jsx` support for jest tests
- confiure `Babel` for 'jsx' file extention
- remove `variant` and color properties from `Alert`'s `<SVGIcon>`
- setup global imports for `Jest` testing Env
- fix `staticAdaptor` typo in `README` file

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.15.5",
 		"@babel/preset-env": "^7.15.6",
+		"@babel/preset-react": "^7.14.5",
 		"@jest/globals": "^27.2.2",
 		"@storybook/addon-a11y": "^6.3.8",
 		"@storybook/addon-actions": "^6.3.8",
@@ -76,6 +77,7 @@
 		"@storybook/svelte": "^6.3.8",
 		"@sveltejs/adapter-static": "^1.0.0-next.20",
 		"@sveltejs/kit": "next",
+		"@testing-library/dom": "^8.6.0",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/svelte": "^3.0.3",
 		"@types/jest": "^27.0.2",
@@ -95,7 +97,9 @@
 		"sass-loader": "^10",
 		"style-loader": "^2",
 		"svelte-check": "^2.2.6",
+		"svelte-fragment-component": "^1.2.0",
 		"svelte-jester": "^2.1.4",
+		"svelte-jsx": "^2.0.0",
 		"svelte-loader": "^3.1.2",
 		"svelte-preprocess": "^4.9.4",
 		"svelte2tsx": "^0.4.6",
