--- a/package.json
+++ b/package.json
@@ -61,35 +61,35 @@
 	"dependencies": {
 		"clsx": "^1.1.1",
 		"sass": "^1.42.1",
-		"svelte": "^3.42.6"
+		"svelte": "^3.43.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.5",
 		"@babel/preset-env": "^7.15.6",
 		"@babel/preset-react": "^7.14.5",
 		"@jest/globals": "^27.2.2",
-		"@storybook/addon-a11y": "^6.3.8",
-		"@storybook/addon-actions": "^6.3.8",
-		"@storybook/addon-essentials": "^6.3.8",
-		"@storybook/addon-links": "^6.3.8",
+		"@storybook/addon-a11y": "^6.3.9",
+		"@storybook/addon-actions": "^6.3.9",
+		"@storybook/addon-essentials": "^6.3.9",
+		"@storybook/addon-links": "^6.3.9",
 		"@storybook/addon-svelte-csf": "^1.1.0",
 		"@storybook/preset-scss": "^1.0.3",
-		"@storybook/svelte": "^6.3.8",
+		"@storybook/svelte": "^6.3.9",
 		"@sveltejs/adapter-static": "^1.0.0-next.20",
-		"@sveltejs/kit": "next",
-		"@testing-library/dom": "^8.6.0",
+		"@sveltejs/kit": "^1.0.0-next.179",
+		"@testing-library/dom": "^8.7.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/svelte": "^3.0.3",
 		"@types/jest": "^27.0.2",
-		"@typescript-eslint/eslint-plugin": "^4.31.2",
-		"@typescript-eslint/parser": "^4.31.2",
+		"@typescript-eslint/eslint-plugin": "^4.32.0",
+		"@typescript-eslint/parser": "^4.32.0",
 		"css-loader": "^5.2.6",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"husky": "^7.0.2",
 		"identity-obj-proxy": "^3.0.0",
-		"jest": "^27.2.1",
+		"jest": "^27.2.4",
 		"jest-css-modules-transform": "^4.3.0",
 		"lint-staged": "^11.1.2",
 		"prettier": "^2.4.1",
@@ -98,11 +98,11 @@
 		"style-loader": "^2",
 		"svelte-check": "^2.2.6",
 		"svelte-fragment-component": "^1.2.0",
-		"svelte-jester": "^2.1.4",
+		"svelte-jester": "^2.1.5",
 		"svelte-jsx": "^2.0.0",
 		"svelte-loader": "^3.1.2",
-		"svelte-preprocess": "^4.9.4",
-		"svelte2tsx": "^0.4.6",
+		"svelte-preprocess": "^4.9.7",
+		"svelte2tsx": "^0.4.7",
 		"ts-jest": "^27.0.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
