feat(alpha): :sparkles: extract `Backdrop` component from  `Modal` component
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
 		"editor.formatOnSave": true,
 		"editor.defaultFormatter": "svelte.svelte-vscode"
 	},
-	"cSpell.words": ["GITHUBTOKEN", "pinterest", "poppanator", "zindex"],
+	"cSpell.words": ["Crossfade", "GITHUBTOKEN", "pinterest", "poppanator", "zindex"],
 	"conventionalCommits.scopes": ["pre-release", "beta", "alpha", "patch", "BREAKING CHANGE", "dev"]
 }
