--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,15 @@
 		"editor.formatOnSave": true,
 		"editor.defaultFormatter": "svelte.svelte-vscode"
 	},
-	"cSpell.words": ["Crossfade", "GITHUBTOKEN", "pinterest", "poppanator", "zindex"],
+	"cSpell.words": [
+		"CODECLIMATE",
+		"Crossfade",
+		"GITHUBTOKEN",
+		"lcov",
+		"paambaati",
+		"pinterest",
+		"poppanator",
+		"zindex"
+	],
 	"conventionalCommits.scopes": ["pre-release", "beta", "alpha", "patch", "BREAKING CHANGE", "dev"]
 }
