--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,13 @@
 			"$routes/*": ["src/routes/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.svelte"],
+	"include": [
+		"./node_modules/@sveltejs/kit/types/ambient-modules.d.ts",
+		"src/**/*.d.ts",
+		"src/**/*.js",
+		"src/**/*.jsx",
+		"src/**/*.ts",
+		"src/**/*.svelte"
+	],
 	"exclude": ["src/**/*.spec.ts", "src/**/*.jsx"]
 }
