--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,5 +4,9 @@
 		"isolatedModules": false
 	},
 	"exclude": ["src/**"],
-	"include": ["src/**/*.spec.ts", "src/**.*.spec.jsx"]
+	"include": [
+		"./node_modules/@sveltejs/kit/types/ambient-modules.d.ts",
+		"src/**/*.spec.ts",
+		"src/**.*.spec.jsx"
+	]
 }
