chore: :wrench: extract `preprocess.replace` in `svelte.config.js` to a separate function
- add `testid` to vscode `cSpell.words` seetings

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
 		"paambaati",
 		"pinterest",
 		"poppanator",
+		"testid",
 		"zindex"
 	],
 	"conventionalCommits.scopes": ["pre-release", "beta", "alpha", "patch", "BREAKING CHANGE", "dev"]
