feat: :heavy_plus_sign: add `dotenv` to dev dependencies
- configure svelte to use `dotenv` package

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"svelte:dev": "svelte-kit dev --open --host",
 		"svelte:build": "svelte-kit build",
 		"svelte:static": "NODE_ENV=static svelte-kit build",
-		"svelte:pkg": "svelte-kit package",
+		"svelte:pkg": "NODE_ENV=pkg svelte-kit package",
 		"svelte:preview": "svelte-kit preview",
 		"test": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-vm-modules jest src --config jest.config.cjs --passWithNoTests",
 		"test:watch": "npm run test -- --coverage --watch",
@@ -92,6 +92,7 @@
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
 		"css-loader": "^5.2.6",
+		"dotenv": "^10.0.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
