refactor: :truck: rename `EnvBooleanParser` helper to `Booleanify`
- rename associated test file
- organize helper directory

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 		"editor.defaultFormatter": "svelte.svelte-vscode"
 	},
 	"cSpell.words": [
+		"booleanify",
 		"CODECLIMATE",
 		"Crossfade",
 		"GITHUBTOKEN",
