--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"name": "Soren Abedi",
 		"url": "https://sorenabedi.ir"
 	},
+	"description": "an opinionated UI framework for SvelteKit with theme support built-in",
 	"license": "GPL-3.0",
 	"keywords": [
 		"artist-ui",
@@ -69,7 +70,7 @@
 		"@babel/core": "^7.15.8",
 		"@babel/preset-env": "^7.15.8",
 		"@babel/preset-react": "^7.14.5",
-		"@jest/globals": "^27.3.0",
+		"@jest/globals": "^27.3.1",
 		"@storybook/addon-a11y": "^6.3.12",
 		"@storybook/addon-actions": "^6.3.12",
 		"@storybook/addon-essentials": "^6.3.12",
@@ -78,7 +79,7 @@
 		"@storybook/preset-scss": "^1.0.3",
 		"@storybook/svelte": "^6.3.12",
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
-		"@sveltejs/kit": "^1.0.0-next.186",
+		"@sveltejs/kit": "^1.0.0-next.188",
 		"@testing-library/dom": "^8.10.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/svelte": "^3.0.3",
@@ -90,15 +91,15 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"husky": "^7.0.2",
+		"husky": "^7.0.4",
 		"identity-obj-proxy": "^3.0.0",
-		"jest": "^27.3.0",
+		"jest": "^27.3.1",
 		"jest-css-modules-transform": "^4.3.0",
 		"lint-staged": "^11.2.3",
 		"nanoid": "^3.1.30",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
-		"replace-in-file": "^6.3.1",
+		"replace-in-file": "^6.3.2",
 		"sass-loader": "^10",
 		"string-replace-loader": "^3.0.3",
 		"style-loader": "^2",
