fix: :bug: fix `process.env is not defined` in client-side, after build
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"name": "Soren Abedi",
 		"url": "https://sorenabedi.ir"
 	},
+	"types": "index.d.ts",
+	"main": "index.js",
 	"description": "an opinionated UI framework for SvelteKit with theme support built-in",
 	"license": "GPL-3.0",
 	"keywords": [
