--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/svelte": "^3.0.3",
 		"@types/jest": "^27.0.2",
+		"@types/prismjs": "^1.16.6",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
 		"css-loader": "^5.2.6",
@@ -101,6 +102,7 @@
 		"nanoid": "^3.1.30",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
+		"prism-themes": "^1.9.0",
 		"replace-in-file": "^6.3.2",
 		"sass-loader": "^10",
 		"string-replace-loader": "^3.0.3",
@@ -119,6 +121,7 @@
 	},
 	"dependencies": {
 		"clsx": "^1.1.1",
+		"prismjs": "^1.25.0",
 		"sass": "^1.43.3"
 	}
 }
