--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   code-structure-test:
     runs-on: ${{ matrix.os }}
+    if: ${{ !contains(github.event.head_commit.message, 'docs-only') }}
 
     strategy:
       matrix:
