docs(pre-release): :memo: update project `README.md` file
- set homepage to https://artist-ui.sorenart.net in `package.json`

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"type": "git",
 		"url": "https://github.com/sorenabedi/artist-svelte"
 	},
-	"homepage": "",
+	"homepage": "https://artist-ui.sorenart.net",
 	"bugs": {
 		"url": "https://github.com/sorenabedi/artist-svelte/issues"
 	},
