feat: :sparkles: add support for non sass/scss project
- remove unsued `_font-vazir.scss` module
- add css files as placeholders for `svelte:pkg` step
- update `postPKG.js` script
- remove RAW scss components from package
- update package website to https://artist-ui.pages.dev

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"type": "git",
 		"url": "https://github.com/sorenabedi/artist-svelte"
 	},
-	"homepage": "https://artist-ui.sorenart.net",
+	"homepage": "https://artist-ui.pages.dev",
 	"bugs": {
 		"url": "https://github.com/sorenabedi/artist-svelte/issues"
 	},
